# customsgateways

./: .gitignore  Phase1_Proposal_CustomsGateways.docx  Phase1_Technical_Specification.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: classification_routes.py  pipeline_routes.py
backend/app/pipeline/: orchestrator.py
backend/app/services/: classification.py  embedding.py  enhancement.py  extraction.py  field_definitions.py  qdrant_service.py
backend/scripts/: ingest_data.py  init_db.py
frontend/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/dashboard/: page.css  page.jsx
frontend/src/app/login/: page.css  page.jsx
frontend/src/components/: clientlenis.jsx
frontend/src/components/cardDetailComponents/: AISuggestion.css  AISuggestion.jsx  ActionButtons.css  ActionButtons.jsx  AssumptionsList.css  AssumptionsList.jsx  AutomationInsights.css  AutomationInsights.jsx  ConfidenceBars.css  ConfidenceBars.jsx  DonutChart.css  DonutChart.jsx  DonutChartGrid.css  DonutChartGrid.jsx  ExposureDistribution.css  ExposureDistribution.jsx  FXSensitivity.css  FXSensitivity.jsx  HubComparison.css  HubComparison.jsx  HubTable.css  HubTable.jsx  ImprovementMetrics.css  ImprovementMetrics.jsx  InfoBox.css  InfoBox.jsx  (+18 more)
frontend/src/context/: PipelineContext.jsx
frontend/src/data/: processingStepsData.js
frontend/src/services/: api.js
(+18 files in other folders)
